force-app/main/default/objects/Case/fields/DownReg__c.field-meta.xml
<CustomField>
    <fullName>DownReg__c</fullName>
    <label>DownReg?</label>
    <summaryFilterItems>
        <field>Cycle_Medication__c.Medication_Type__c</field>
        <operation>equals</operation>
        <value>GnRH/down reg</value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Medication__c.Related_Cycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>