force-app/main/default/objects/Case/fields/Egg_Donation_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Egg_Donation_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Egg Donation Event Created</label>
    <type>Checkbox</type>
</CustomField>