force-app/main/default/objects/Case/fields/Egg_Freeze_Type__c.field-meta.xml
<CustomField>
    <fullName>Egg_Freeze_Type__c</fullName>
    <label>Egg Freeze Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Egg Freeze</fullName>
            </value>
            <value>
                <fullName>Medical Egg Freeze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>