force-app/main/default/objects/Case/fields/Egg_Thawing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Egg_Thawing_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embryo Thawing Completed</label>
    <type>Checkbox</type>
</CustomField>