force-app/main/default/objects/Case/fields/Eggs_Collected_In_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Collected_In_Cycle__c</fullName>
    <label>Total Eggs Collected In Cycle</label>
    <summarizedField>Cycle_Event__c.Eggs_Collected__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>