force-app/main/default/objects/Case/fields/Eggs_for_Insemination__c.field-meta.xml
<CustomField>
    <fullName>Eggs_for_Insemination__c</fullName>
    <label>Eggs for Insemination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>