force-app/main/default/objects/Case/fields/Eggs_Original_Cryo_Preservation_Date__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Original_Cryo_Preservation_Date__c</fullName>
    <label>Eggs Original Cryo Preservation Date</label>
    <summarizedField>Cycle_Event__c.Initial_Egg_Freeze_Date__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>