force-app/main/default/objects/Case/fields/EMB_ICSI__c.field-meta.xml
<CustomField>
    <fullName>EMB_ICSI__c</fullName>
    <description>Determine if any of the embryos transferred were a result of an oocyte being fertilised using ICSI.
If no embryo transfer occurred, leave this data item blank.</description>
    <label>ANZARD - Whether any transferred embryos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>