force-app/main/default/objects/Case/fields/Embryo_Batch__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Embryo Batch</label>
    <referenceTo>Embryo_Batch__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>