force-app/main/default/objects/Case/fields/Embryo_Transfer_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Transfer_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embryo Transfer Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>