force-app/main/default/objects/Case/fields/Embryo_Vitrification_Cycle_Event__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Vitrification_Cycle_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embryo Vitrification Cycle Event</label>
    <type>Checkbox</type>
</CustomField>