force-app/main/default/objects/Case/fields/ET_DATE__c.field-meta.xml
<CustomField>
    <fullName>ET_DATE__c</fullName>
    <description>Determine the date when embryo transfer to the female patient was performed.
If no embryos were transferred, leave this data item blank.</description>
    <label>ANZARD - Embryo transfer date</label>
    <type>Date</type>
</CustomField>