force-app/main/default/objects/Case/fields/Expected_EPU_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_EPU_Date__c</fullName>
    <label>Expected EPU Date</label>
    <type>Date</type>
</CustomField>