force-app/main/default/objects/Case/fields/External_Cycle__c.field-meta.xml
<CustomField>
    <fullName>External_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Cycle</label>
    <type>Checkbox</type>
</CustomField>