force-app/main/default/objects/Case/fields/FDAT_EGG__c.field-meta.xml
<CustomField>
    <fullName>FDAT_EGG__c</fullName>
    <description>If there is more than one batch of thawed/warmed oocytes being used in the cycle, with different cryopreservation dates, record the earliest cryopreservation date.</description>
    <label>ANZARD - Initial cryopreservation date o</label>
    <type>Date</type>
</CustomField>