force-app/main/default/objects/Case/fields/FDAT_EMB__c.field-meta.xml
<CustomField>
    <fullName>FDAT_EMB__c</fullName>
    <description>If there is more than one embryo being thawed/warmed and the embryos have different cryopreservation dates (from different batches), then record the earliest cryopreservation date.</description>
    <label>ANZARD - Initial cryopreservation date o</label>
    <type>Date</type>
</CustomField>