force-app/main/default/objects/Case/fields/FDOB_NON_PAT__c.field-meta.xml
<CustomField>
    <fullName>FDOB_NON_PAT__c</fullName>
    <description>Captures the female intending parent’s date of birth who is not receiving treatment in the cycle. Complete this field if this is an embryo transfer for a surrogacy cycle (SURR=y) where the intending parents are female- male couple or single female.</description>
    <label>ANZARD - Non-patient, female intending p</label>
    <type>Date</type>
</CustomField>