force-app/main/default/objects/Case/fields/FDOB_PAT__c.field-meta.xml
<CustomField>
    <fullName>FDOB_PAT__c</fullName>
    <description>Required to define age of patient at the time of treatment. The female patient’s DOB is the DOB of the woman who is intending to or receiving treatment.</description>
    <label>ANZARD - Female patient’s date of birth.</label>
    <type>Date</type>
</CustomField>