force-app/main/default/objects/Case/fields/FERT_PRES__c.field-meta.xml
<CustomField>
    <fullName>FERT_PRES__c</fullName>
    <description>&quot;To determine whether the treatment cycle took place for fertility preservation purposes (where the female patient does not intend to use the oocytes or resulting embryos within the
next 12 months).&quot;</description>
    <label>ANZARD - Fertility preservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = No, pregnancy intended ASAP</fullName>
            </value>
            <value>
                <fullName>2 = Yes, storing for future use ONLY (&gt;12 months time)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>