force-app/main/default/objects/Case/fields/Fertilisation_Check_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Fertilisation_Check_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fertilisation Check Event Created</label>
    <type>Checkbox</type>
</CustomField>