force-app/main/default/objects/Case/fields/Flow_Display_Text__c.field-meta.xml
<CustomField>
    <fullName>Flow_Display_Text__c</fullName>
    <formula>Contact.FirstName &amp; &quot; &quot;&amp; Contact.LastName &amp; &quot; - &quot;&amp; TEXT(Day(Contact.Birthdate))&amp;&quot;/&quot;&amp;TEXT(MONTH(Contact.Birthdate))&amp;&quot;/&quot;&amp;TEXT(YEAR(Contact.Birthdate))&amp; &quot; - &quot;&amp; Contact.Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Display Text</label>
    <type>Text</type>
</CustomField>