force-app/main/default/objects/Case/fields/FNAM_FST2__c.field-meta.xml
<CustomField>
    <fullName>FNAM_FST2__c</fullName>
    <description>Facilitates creation of the statistical linkage key used by ANZARD to track cycles undertaken by the same woman.</description>
    <label>ANZARD - First two letters of female pat</label>
    <length>2</length>
    <type>Text</type>
</CustomField>