force-app/main/default/objects/Case/fields/FP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FP_TYPE__c</fullName>
    <description>Indicate whether the reason for fertility preservation was medical or non-medical.</description>
    <label>ANZARD - The reason for female fertility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Medical reason</fullName>
            </value>
            <value>
                <fullName>2 = Non-medical reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>