force-app/main/default/objects/Case/fields/Fresh_Egg_Donor__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Egg_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fresh Egg Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>