force-app/main/default/objects/Case/fields/Fresh_Egg_Donor_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Egg_Donor_Day_1__c</fullName>
    <label>Fresh Egg Donor Day 1</label>
    <type>Date</type>
</CustomField>