force-app/main/default/objects/Case/fields/Fresh_Egg_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Egg_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fresh Egg Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycles (Fresh Egg Recipient)</relationshipLabel>
    <relationshipName>Cycles1</relationshipName>
    <type>Lookup</type>
</CustomField>