force-app/main/default/objects/Case/fields/FSH_Used_In_Cycle__c.field-meta.xml
<CustomField>
    <fullName>FSH_Used_In_Cycle__c</fullName>
    <label>FSH Used In Cycle</label>
    <summaryFilterItems>
        <field>Cycle_Medication__c.Medication_Type__c</field>
        <operation>equals</operation>
        <value>FSH</value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Medication__c.Related_Cycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>