force-app/main/default/objects/Case/fields/HEIGHT_F__c.field-meta.xml
<CustomField>
    <fullName>HEIGHT_F__c</fullName>
    <description>Can be self-reported (by the female patient) or measured by the clinic at the time of treatment. The height entered must correspond to the female patient whose date of birth is recorded in FDOB_PAT in the cycle.</description>
    <label>ANZARD - The female patient’s height (in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>