force-app/main/default/objects/Case/fields/In_Rooms__c.field-meta.xml
<CustomField>
    <fullName>In_Rooms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Rooms</label>
    <type>Checkbox</type>
</CustomField>