force-app/main/default/objects/Case/fields/Insemination_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insemination Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>