force-app/main/default/objects/Case/fields/Insemination_Method__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Method__c</fullName>
    <label>Insemination Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IVF</fullName>
            </value>
            <value>
                <fullName>ICSI</fullName>
            </value>
            <value>
                <fullName>Half/Half</fullName>
            </value>
            <value>
                <fullName>ICSI with Ca++</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>