force-app/main/default/objects/Case/fields/Is_Cancelled_Check__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled Check</label>
    <type>Checkbox</type>
</CustomField>