force-app/main/default/objects/Case/fields/Is_Patient_Donating__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Donating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patient Donating?</label>
    <type>Checkbox</type>
</CustomField>