force-app/main/default/objects/Case/fields/IUI_DATE__c.field-meta.xml
<CustomField>
    <fullName>IUI_DATE__c</fullName>
    <description>This data item applies only to treatment cycles where IUI is performed using donated sperm.  Intra-vaginal insemination using donated sperm is not considered in this context and should not be recorded in ANZARD.</description>
    <label>ANZARD - Date of intra-uterine insemina</label>
    <type>Date</type>
</CustomField>