force-app/main/default/objects/Case/fields/IVM__c.field-meta.xml
<CustomField>
    <fullName>IVM__c</fullName>
    <description>A cycle is considered an IVM cycle if the female patient was prepared specifically for an IVM cycle or if an alternate treatment cycle was converted prior to OPU into an IVM treatment cycle, and the immature oocytes were then matured in vitro.</description>
    <label>ANZARD - In-vitro Maturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_YES_NO</valueSetName>
    </valueSet>
</CustomField>