force-app/main/default/objects/Case/fields/Lab_Cycle_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Lab_Cycle_Outcome__c</fullName>
    <label>Lab Cycle Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WFPR</fullName>
            </value>
            <value>
                <fullName>No Transfer</fullName>
            </value>
            <value>
                <fullName>Freeze All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>