force-app/main/default/objects/Case/fields/LAH_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>LAH_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LAH Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>