force-app/main/default/objects/Case/fields/Laser_Assisted_Hatching_Performed__c.field-meta.xml
<CustomField>
    <fullName>Laser_Assisted_Hatching_Performed__c</fullName>
    <label>Laser Assisted Hatching Performed?</label>
    <summaryFilterItems>
        <field>Cycle_Event__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Laser Assisted Hatching</value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>