force-app/main/default/objects/Case/fields/Lead_In_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_In_Start_Date__c</fullName>
    <label>Lead In Start Date</label>
    <type>Date</type>
</CustomField>