force-app/main/default/objects/Case/fields/Linked_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Linked_Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>