force-app/main/default/objects/Case/fields/MALE_DIAG__c.field-meta.xml
<CustomField>
    <fullName>MALE_DIAG__c</fullName>
    <description>This data item applies to the male intending parent only (where PARENT_SEX is female-male couple).
In the opinion of the treating clinician or clinic, the principal cause of male factor infertility. To be completed if male factor infertility is present.
This field must be completed if CI_MALE is “yes”.</description>
    <label>ANZARD - Primary cause of male factor in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1= Idiopathic (unexplained)</fullName>
            </value>
            <value>
                <fullName>2= Genetic – Klinefelter</fullName>
            </value>
            <value>
                <fullName>3= Genetic - Y deletion</fullName>
            </value>
            <value>
                <fullName>4= Genetic – other aneuploidies, single gene</fullName>
            </value>
            <value>
                <fullName>5= Testis damage - cancer treatment</fullName>
            </value>
            <value>
                <fullName>6= Testis damage - other (incl. past/present cryptorchidism, vascular, infective, trauma)</fullName>
            </value>
            <value>
                <fullName>7= Gonadotrophin deficiency</fullName>
            </value>
            <value>
                <fullName>8= Vasectomy</fullName>
            </value>
            <value>
                <fullName>9= Congenital absence of the vas deferens/cystic fibrosis</fullName>
            </value>
            <value>
                <fullName>10= Obstructive disorder (other)</fullName>
            </value>
            <value>
                <fullName>11= Erectile dysfunction (incl. psychosexual)</fullName>
            </value>
            <value>
                <fullName>12= Ejaculatory disorders (incl. spinal injury,  retrograde and anejaculation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>