force-app/main/default/objects/Case/fields/MAT_COMP__c.field-meta.xml
<CustomField>
    <fullName>MAT_COMP__c</fullName>
    <description>Record any maternal complications of pregnancy. Insert as much detail as possible.</description>
    <label>ANZARD - Maternal complications of pregn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>