force-app/main/default/objects/Case/fields/MDOB_1__c.field-meta.xml
<CustomField>
    <fullName>MDOB_1__c</fullName>
    <description>This field must be completed if the intending parents are a female-male couple, a single male, a male-male couple. If one of the intending parents is also the sperm donor, record the DOB for that parent here. Otherwise, leave blank.</description>
    <label>ANZARD - First male intending parent’s d</label>
    <type>Date</type>
</CustomField>