force-app/main/default/objects/Case/fields/MDOB_2__c.field-meta.xml
<CustomField>
    <fullName>MDOB_2__c</fullName>
    <description>This field should only be completed if the intending parents are a male-male couple.</description>
    <label>ANZARD - Second male intending parent’s</label>
    <type>Date</type>
</CustomField>