force-app/main/default/objects/Case/fields/Medicare_Exempt_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Exempt_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicare Exempt Cycle</label>
    <type>Checkbox</type>
</CustomField>