force-app/main/default/objects/Case/fields/Medicare_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicare Submitted</label>
    <type>Checkbox</type>
</CustomField>