force-app/main/default/objects/Case/fields/Medicare_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Submitted_Date__c</fullName>
    <label>Medicare Submitted Date</label>
    <type>Date</type>
</CustomField>