force-app/main/default/objects/Case/fields/Medication_Table__c.field-meta.xml
<CustomField>
    <fullName>Medication_Table__c</fullName>
    <label>Medication Table</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>