force-app/main/default/objects/Case/fields/Medications_Checked_By_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Medications_Checked_By_Nurse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medications Checked By Nurse?</label>
    <type>Checkbox</type>
</CustomField>