force-app/main/default/objects/Case/fields/MNAM_FST2__c.field-meta.xml
<CustomField>
    <fullName>MNAM_FST2__c</fullName>
    <description>Facilitates creation of the statistical linkage key used by ANZARD.</description>
    <label>ANZARD - First two letters of male inten</label>
    <length>2</length>
    <type>Text</type>
</CustomField>