force-app/main/default/objects/Case/fields/MORB_ADM__c.field-meta.xml
<CustomField>
    <fullName>MORB_ADM__c</fullName>
    <description>Indicate whether the female patient was admitted to hospital with any condition related to fertility treatment. Examples include but are not limited to OHSS, infection, bleeding after OPU.
Record as much information as is known about the hospital admission and morbidity in the MORB_INF field.</description>
    <label>ANZARD - Hospital admission with ART rel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>