force-app/main/default/objects/Case/fields/MORB_INF__c.field-meta.xml
<CustomField>
    <fullName>MORB_INF__c</fullName>
    <description>Record any information related to the female patient’s hospital admission or cause of morbidity in this field.</description>
    <label>ANZARD - Morbidity information and detai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>