force-app/main/default/objects/Case/fields/MRB_OHSS__c.field-meta.xml
<CustomField>
    <fullName>MRB_OHSS__c</fullName>
    <description>Indicate whether the female patient experienced ovarian hyperstimulation syndrome at any time during the treatment cycle.
If the patient did experience OHSS, record as much information as is known in the MORB_INF field.</description>
    <label>ANZARD - Morbidity – OHSS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>