force-app/main/default/objects/Case/fields/My_Cycle__c.field-meta.xml
<CustomField>
    <fullName>My_Cycle__c</fullName>
    <formula>IF( $User.Id =  Doctor_Initiating_Cycle__r.Internal_Doctor_Linkage__r.Id ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Cycle</label>
    <type>Checkbox</type>
</CustomField>