force-app/main/default/objects/Case/fields/N_BL_ET__c.field-meta.xml
<CustomField>
    <fullName>N_BL_ET__c</fullName>
    <description>Number of blastocyst stage embryos transferred.
ANZARD defines a blastocyst as an embryo that is five to six days old, after fertilisation.</description>
    <label>ANZARD - Number of blastocysts transferr</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>