force-app/main/default/objects/Case/fields/N_BLFZ_S__c.field-meta.xml
<CustomField>
    <fullName>N_BLFZ_S__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ANZARD defines a blastocyst as an embryo that is five to six days old, after fertilisation.
For embryo donation/provision cycles, use this data item to record the number of slow frozen blastocysts donated/provided. If fresh embryos are being donated/provided, use the N_EMBDON_FRESH data item instead.</description>
    <label>ANZARD - Number of blastocysts slow froz</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>