force-app/main/default/objects/Case/fields/N_CL_ET__c.field-meta.xml
<CustomField>
    <fullName>N_CL_ET__c</fullName>
    <description>Number of cleavage-stage embryos transferred.
ANZARD defines a cleavage embryo as an embryo that is one to four days old, after fertilisation.</description>
    <label>ANZARD - Number of cleavage-stage embryo</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>