force-app/main/default/objects/Case/fields/N_DELIV__c.field-meta.xml
<CustomField>
    <fullName>N_DELIV__c</fullName>
    <description>The number of babies born meeting at least one of the following criteria:
1. Born at 20 weeks or more gestation
2. Birthweight is &gt;= 400 grams Include all live born and stillborn babies.</description>
    <label>ANZARD - Number of babies born.</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>