force-app/main/default/objects/Case/fields/N_EGFZ_S__c.field-meta.xml
<CustomField>
    <fullName>N_EGFZ_S__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of oocytes slow frozen in this cycle. For oocyte donation/provision cycles, use this data item to record the number of slow frozen oocytes donated/provided. If fresh oocytes are donated/provided, use the N_EGGDON_FRESH data item instead.</description>
    <label>ANZARD - Number of oocytes slow frozen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>