force-app/main/default/objects/Case/fields/N_EGFZ_V__c.field-meta.xml
<CustomField>
    <fullName>N_EGFZ_V__c</fullName>
    <description>Number of oocytes vitrified in this cycle. For oocyte donation/provision cycles, use this data item to record the number of vitrified oocytes donated/provided. If fresh oocytes are donated/provided, use the N_EGGDON_FRESH data item instead.</description>
    <label>ANZARD - Number of oocytes vitrified</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>