force-app/main/default/objects/Case/fields/N_EGGDON_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EGGDON_FRESH__c</fullName>
    <description>The number of fresh oocytes provided/donated to another patient for immediate or later use. To record the donation/provision of cryopreserved oocytes, use one of N_EGFZ_S or N_EGFZ_V data items instead.</description>
    <label>ANZARD - Number of fresh oocytes donated</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>