force-app/main/default/objects/Case/fields/N_EGGREC_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EGGREC_FRESH__c</fullName>
    <description>Number of fresh (not cryopreserved) oocytes received from another patient.
If a patient is receiving cryopreserved oocytes, use N_S_EGTH or N_V_EGTH data items to record the number of thawed/warmed oocytes received.</description>
    <label>ANZARD - Number of fresh oocytes receive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>