force-app/main/default/objects/Case/fields/N_EGGS__c.field-meta.xml
<CustomField>
    <fullName>N_EGGS__c</fullName>
    <description>If no oocytes were retrieved in the cycle, then record “0” (zero) for this field.
Do not leave this field blank.</description>
    <label>ANZARD - Number of oocytes retrieved at</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>