force-app/main/default/objects/Case/fields/N_EMBDON_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EMBDON_FRESH__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This data item should be completed in the cycle of the individual who provided/donated fresh embryos. To record the number of cryopreserved embryos provided/donated, use one of N_CLFZ_S, N_CLFZ_V, N_BLFZ_S, N_BLFZ_V data items.</description>
    <label>ANZARD - Number of fresh embryos provide</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>