force-app/main/default/objects/Case/fields/N_EMBREC_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EMBREC_FRESH__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This data item should be completed in the cycle for the female patient who received the fresh embryos.
If cryopreserved (frozen) embryos are received, please use N_S_CLTH, N_S_BLTH, N_V_CLTH, N_V_BLTH data items instead to record the number of embryos received.</description>
    <label>ANZARD - Number of fresh embryos receive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>