force-app/main/default/objects/Case/fields/N_FERT__c.field-meta.xml
<CustomField>
    <fullName>N_FERT__c</fullName>
    <description>To be recorded in the opinion of the treating embryologist. For example, in their opinion, although two pronuclei are not seen but cleavage has occurred, normal fertilisation has occurred.</description>
    <label>ANZARD - Number of oocytes fertilised no</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>