force-app/main/default/objects/Case/fields/N_FH__c.field-meta.xml
<CustomField>
    <fullName>N_FH__c</fullName>
    <description>Number of fetal hearts seen on first ultrasound (intrauterine only)
This field must be completed if PR_CLIN field is “y”.</description>
    <label>ANZARD - Number of fetal hearts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>