force-app/main/default/objects/Case/fields/N_GIFT__c.field-meta.xml
<CustomField>
    <fullName>N_GIFT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Record, the number of oocytes that are placed in the fallopian tube for GIFT.</description>
    <label>ANZARD - Number of oocytes replaced in a</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>