force-app/main/default/objects/Case/fields/N_IVF__c.field-meta.xml
<CustomField>
    <fullName>N_IVF__c</fullName>
    <description>Number of oocytes attempted to be fertilised using IVF.</description>
    <label>ANZARD - Number of oocytes treated with</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>